@@ -2192,6 +2192,16 @@ IMPROVED_THROWING=<ABILITY>\
 As the fighter gains proficiency in this skill, he or she hits more accurately \
 with thrown weapons, and does up to double damage.
 
+SKILL_INFORMANT=INFORMANT
+INFORMANT=<ABILITY>\
+Usage    : INFORMANT [MOB NAME] [REASON]\n\r\
+Example  : informant orc warrant\n\r\
+This skill allows the player to inexpensively purchase an informant in the area \
+they are currently in.  So long as the player remains in the area, and for at least \
+a day, the informant will appear and notify the whereabouts of anyone matching the \
+reason given. Reasons can be WARRANT for anyone with a warrant, an amount of money \
+for anyone as rich or better, a race, or a character class.
+
 SKILL_INSTRUMENTBASH=INSTRUMENT_BASH
 IBASH=INSTRUMENT_BASH
 INSTRUMENTBASH=INSTRUMENT_BASH
