@@ -1,3 +1,6 @@
+# Build 5.9.8 Release ?
+  1. New burglar skill: Informant
+
 # Build 5.9.7 Release 08/29/2018
    1. Scholars gain XP from visiting bookstores, and can study dissertations.
    2. A lot of the old static strings in rideables are now customizable by editors, Shipwright/Wainwright
